--- a/css/styles.css
+++ b/css/styles.css
@@ -688,25 +688,25 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.2em; }
 
 h1 {
-  font-size: 2.8em;
-  /* 34px */
+  font-size: 1.8em;
+  /* 25px */
   color: #000;
   margin-bottom: 0.25em; }
 
 h2 {
-  font-size: 1.75em;
-  /* 21px */
+  font-size: 1.29em;
+  /* 18px */
   color: #666;
   margin-bottom: 0.4em; }
 
 h3 {
-  font-size: 1.5em;
-  /* 18px */
+  font-size: 1.25em;
+  /* 16.25px */
   color: #000;
   margin-bottom: 0.25em; }
 
 h4 {
-  font-size: 1.25em;
+  font-size: 1.15em;
   /* 15px */
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
   font-weight: normal; }
@@ -802,7 +802,7 @@ body {
 #container {
   position: relative;
   z-index: 2;
-  font-size: 0.75em; }
+  font-size: 0.875em; }
 
 /* backgrounds -------- */
 .parallax {
@@ -922,7 +922,7 @@ body {
 /* SUB PAGES ******************************************** */
 .article {
   width: 90%;
-  padding: 1em 2%;
+  padding: 1em 5%;
   margin: 0 auto 30px;
   opacity: 0.97;
   background: #fff;
@@ -930,6 +930,7 @@ body {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
+  box-sizing: border-box;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
@@ -943,10 +944,15 @@ body {
 .article ul {
   margin-bottom: 1em; }
 
-.article li {
+.article ul li {
   margin-left: 3%;
   padding-left: 1%;
   list-style-type: circle; }
+
+.article ol {
+  margin: 0 0 1em 24px; }
+  .article ol li {
+    list-style: decimal; }
 
 .col {
   float: left; }
@@ -986,8 +992,9 @@ h2.date {
       max-width: 200px;
       border: 1px solid #bbb;
       margin-bottom: 5px; }
-  .gallery .galleryItemInfo {
-    display: none; }
+
+.galleryItemInfo {
+  display: none; }
 
 @media only screen and (max-width: 900px), only screen and (max-device-width: 900px) {
   .gallery .galleryItem {
@@ -1442,10 +1449,31 @@ h2.date {
   /* GLOBAL STRUCTURE ***************************************** */
   #container {
     width: 100%;
-    min-width: 320px; }
+    min-width: 320px;
+    font-size: 0.8125em; }
 
   .no-js #container {
     background: url(/graphics/global/bg-hex-6px-wht.png) 0 0 repeat; }
+
+  h1 {
+    font-size: 2.1em;
+    /* 25.2px */ }
+
+  h2 {
+    font-size: 1.75em;
+    /* 21px */ }
+
+  h3 {
+    font-size: 1.5em;
+    /* 18px */ }
+
+  h4 {
+    font-size: 1.25em;
+    /* 15px */ }
+
+  h5 {
+    font-size: 1.08em;
+    /* 13px */ }
 
   /* HEADER & NAVIGATION *********************************** */
   #header {
@@ -1545,6 +1573,26 @@ h2.date {
 
   .no-js #container {
     background: url(/graphics/global/bg-hex-6px-wht.png) 0 0 repeat; }
+
+  h1 {
+    font-size: 1.9em;
+    /* 34px */ }
+
+  h2 {
+    font-size: 1.75em;
+    /* 21px */ }
+
+  h3 {
+    font-size: 1.5em;
+    /* 18px */ }
+
+  h4 {
+    font-size: 1.25em;
+    /* 15px */ }
+
+  h5 {
+    font-size: 1.08em;
+    /* 13px */ }
 
   /* HEADER & NAVIGATION *********************************** */
   #header {
@@ -1650,6 +1698,26 @@ h2.date {
   .no-js #container {
     background: url(/graphics/global/bg-hex-6px-wht.png) 0 0 repeat; }
 
+  h1 {
+    font-size: 1.9em;
+    /* 34px */ }
+
+  h2 {
+    font-size: 1.75em;
+    /* 21px */ }
+
+  h3 {
+    font-size: 1.5em;
+    /* 18px */ }
+
+  h4 {
+    font-size: 1.25em;
+    /* 15px */ }
+
+  h5 {
+    font-size: 1.08em;
+    /* 13px */ }
+
   /* HEADER & NAVIGATION *********************************** */
   #header {
     padding: 0 0 1rem; }
@@ -1753,6 +1821,26 @@ h2.date {
 
   .no-js #container {
     background: url(/graphics/global/bg-hex-6px-wht.png) 0 0 repeat; }
+
+  h1 {
+    font-size: 1.9em;
+    /* 34px */ }
+
+  h2 {
+    font-size: 1.75em;
+    /* 21px */ }
+
+  h3 {
+    font-size: 1.5em;
+    /* 18px */ }
+
+  h4 {
+    font-size: 1.25em;
+    /* 15px */ }
+
+  h5 {
+    font-size: 1.08em;
+    /* 13px */ }
 
   /* HEADER & NAVIGATION *********************************** */
   #header {
