--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -83,7 +83,9 @@
 		background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,rgba(244,244,244,1) 31%,rgba(214,214,214,1) 53%,rgba(51,51,51,1) 100%);
 		}
 	#container {
-		position:relative; z-index:2; font-size:0.75em;
+		position: relative; 
+		z-index: 2; 
+		font-size: 0.875em;
 	}
 		//.no-js #container {}
 		//#content, .content {}
@@ -165,12 +167,16 @@
 	.home .parallax {opacity:0.4;}
 
 /* SUB PAGES ******************************************** */
-	.article {width:90%; padding:1em 2%; margin:0 auto 30px; opacity:0.97; background:#fff; z-index:1; -moz-background-clip:padding; -webkit-background-clip:padding-box; background-clip:padding-box; 
+	.article {width:90%; padding:1em 5%; margin:0 auto 30px; opacity:0.97; background:#fff; z-index:1; -moz-background-clip:padding; -webkit-background-clip:padding-box; background-clip:padding-box; box-sizing: border-box;
 		@include borderRadius(8px);
 		@include boxShadow(0px 0px 10px 4px rgba(30, 30, 30, 0.8));}
 		.article img {max-width:100%;}
 		.article ul {margin-bottom:1em;}
-			.article li {margin-left:3%; padding-left:1%; list-style-type:circle;}
+			.article ul li {margin-left:3%; padding-left:1%; list-style-type:circle;}
+		.article ol {
+			margin: 0 0 1em 24px;
+			li {list-style: decimal;}
+		}
 
 	.col {float:left;}
 		.col2 {width:45%;}
@@ -205,10 +211,10 @@
 				margin-bottom: 5px;
 			}
 		}
+	}
 			.galleryItemInfo {
 				display: none;
 			}
-	}
 	@media only screen and (max-width : 900px),
 	only screen and (max-device-width : 900px) {
 		.gallery {
